--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -16,13 +16,31 @@
   border-radius: 4.5rem 4.5rem 0rem 0rem;
   padding: 4rem 1.5rem;
   &__heading {
-    font-family: "shrikhand";
-    font-size: 2.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    & h1 {
+      font-family: "shrikhand";
+      font-size: 2.8rem;
+    }
+    & i {
+      padding-bottom: 1.5rem;
+      font-size: 2.5rem;
+    }
   }
   &__dish {
+    position: relative;
     font-weight: 100;
     font-size: 1.6rem;
     text-transform: uppercase;
+    &::before {
+      width: 4rem;
+      height: 0.2rem;
+      content: "";
+      position: absolute;
+      bottom: 1.5rem;
+      background-color: $color-tertiary;
+    }
   }
   &__list {
     padding-bottom: 2rem;
