--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -1,26 +1,28 @@
-.footer-content {
+footer {
   background-color: darken($color-background, $amount: 75%);
-  color: $color-white;
-  padding: 2.5rem 2rem;
-  &__heading {
-    font-family: "shrikhand", sans-serif;
-    font-weight: 400;
-    font-size: 1.6rem;
-    padding-bottom: 1.5rem;
-  }
-  &__links {
-    list-style: none;
-    a {
-      color: $color-white;
+  .footer-content {
+    color: $color-white;
+    padding: 2.5rem 2rem;
+    &__heading {
+      font-family: "shrikhand", sans-serif;
       font-weight: 400;
-      line-height: 2.5rem;
+      font-size: 1.6rem;
+      padding-bottom: 1.5rem;
     }
-    i {
-      font-size: 1.5rem;
-      margin-right: 1rem;
-    }
-    span {
-      margin-left: 0.6rem;
+    &__links {
+      list-style: none;
+      a {
+        color: $color-white;
+        font-weight: 400;
+        line-height: 2.5rem;
+      }
+      i {
+        font-size: 1.5rem;
+        margin-right: 1rem;
+      }
+      span {
+        margin-left: 0.6rem;
+      }
     }
   }
 }
