--- a/scss/Pages/_accueil.scss
+++ b/scss/Pages/_accueil.scss
@@ -1,19 +1,47 @@
 // welcome page ----> Introduction settings
-.accueil-intro {
-  text-align: center;
-  background: $color-background;
-  padding: 4rem 2rem 5.5rem 2rem;
-  &__argument {
-    padding-bottom: 3rem;
+.intro {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    // justify-content: space-between;
+    margin: 5rem 0rem;
+  }
+  .accueil-intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: $color-background;
+    padding: 4rem 2rem 5.5rem 2rem;
+    @media screen and (min-width: 768px) {
+      border-radius: 1.5rem;
+      justify-content: center;
+      width: 60%;
+    }
+    &__argument {
+      padding-bottom: 3rem;
+    }
   }
 }
 
 .explaination {
   padding: 5rem 2rem 5rem 2rem;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    font-size: 1.6rem;
+  }
   &__list {
     list-style: none;
     li {
+      position: relative;
       margin-bottom: 2rem;
+      @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-evenly;
+      }
     }
   }
 }
@@ -22,9 +50,19 @@
 .restaurants {
   background-color: $color-background;
   padding: 4rem 2rem 6rem 2rem;
+  @media screen and (min-width: 768px) {
+    border-radius: 1.5rem;
+    margin: 2.5rem 0rem 5rem 0rem;
+    padding: 8rem 10rem;
+  }
   &__grid {
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 2rem;
+    @media screen and (min-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: 3rem;
+      column-gap: 8rem;
+    }
   }
 }
