--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -87,7 +87,8 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  left: 1rem;
+  left: -1rem;
+  bottom: 2.3rem;
   height: 2.5rem;
   width: 2.5rem;
   font-size: 1.3rem;
