--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./Composants/cards";
 @import"./Composants/bulletPoint";
 
+@import"./Layout/wrapper";
 @import "./Layout/header";
 @import "./Layout/form";
 @import "./Layout/footer";
