--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "./Utils/variables.scss";
 @import "./Utils/mixins";
+@import"./Utils/keyframes";
 
 @import "./Base/base";
 @import "./Base/typography";
