--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@
     transform: translateY(0px);
   }
 }
+@keyframes rotation-confirm {
+  0% {
+    transform: rotate(-180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 *,
 *::after,
 *::before {
@@ -57,7 +65,6 @@ a {
 
 .btn {
   border: none;
-  padding: 1.8rem 2.2rem;
   box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.2);
   font-weight: bold;
   cursor: pointer;
@@ -66,6 +73,7 @@ a {
   background: linear-gradient(to top left, #9456dc, #ff79db);
   border-radius: 10rem;
   color: #ffffff;
+  padding: 1.8rem 2.2rem;
 }
 .btn--step {
   background-color: #f6f6f6;
@@ -84,15 +92,46 @@ a {
 .btn--dish {
   background-color: #f6f6f6;
   border-radius: 1.5rem;
-  padding: 1.5rem 2.5rem 1.5rem 1rem;
   font-weight: 100;
   font-size: 1.5rem;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  max-width: 345px;
 }
-.btn--dish span {
+.btn--dish .dish__description {
+  padding: 1.5rem;
+  overflow: hidden;
+}
+.btn--dish .dish__description h3,
+.btn--dish .dish__description p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.btn--dish .dish__price {
   font-weight: 700;
+  display: flex;
+  align-items: flex-end;
+  padding: 1.5rem;
+  margin-left: auto;
+}
+.btn--dish .dish__confirm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 9rem;
+  background-color: #99e2d0;
+  border-radius: 0rem 1.5rem 1.5rem 0rem;
+  font-size: 3rem;
+  color: white;
+  margin-right: -9rem;
+  transition: margin 500ms;
+  flex-shrink: 0;
+}
+.btn--dish:hover .dish__confirm {
+  margin: 0;
+}
+.btn--dish:hover i {
+  animation: rotation-confirm 500ms ease-in-out;
 }
 .btn--order {
   background: linear-gradient(to top left, #9456dc, #ff79db);
@@ -341,6 +380,7 @@ footer .footer-content__links span {
   padding-bottom: 2rem;
 }
 .restaurant-menu__list li {
+  overflow: hidden;
   margin-bottom: 2rem;
   list-style: none;
   opacity: 0;
