--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -27,9 +27,22 @@
       font-family: "shrikhand";
       font-size: 2.8rem;
     }
-    & i {
-      padding-bottom: 1.5rem;
-      font-size: 2.5rem;
+    &::before {
+      @include like-btn;
+    }
+    &::after {
+      @include like-btn;
+      background: linear-gradient(to top left, #9456dc, #ff79db);
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      font-weight: 900;
+      opacity: 0;
+    }
+    &:hover::after{
+      opacity: 1;
+      cursor: pointer;
+      transform: scale(1.15);
     }
   }
   &__dish {
