--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -129,3 +129,20 @@
   font-weight: 400;
   border-radius: 5rem;
 }
+
+@mixin like-btn{
+  display: inline-block;
+  position: absolute;
+  right: 1rem;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  padding-bottom: 1.5rem;
+  font-size: 2.5rem;
+  opacity: 1;
+  transition: all 500ms ease-in-out;
+
+}
