--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,10 @@
 @import "./Composants/buttons";
 @import "./Composants/cards";
 @import"./Composants/bulletPoint";
+@import"./Composants/likes";
+@import"./Composants/news";
 
+@import"./Layout/loader";
 @import"./Layout/wrapper";
 @import "./Layout/header";
 @import "./Layout/form";
