--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,28 @@
     transform: rotate(0deg);
   }
 }
+@keyframes loader {
+  0% {
+    opacity: 0.95;
+    z-index: 10000;
+  }
+  50% {
+    opacity: 0.95;
+    z-index: 10000;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1000;
+  }
+}
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 *,
 *::after,
 *::before {
@@ -95,7 +117,6 @@ a {
   font-weight: 100;
   font-size: 1.5rem;
   display: flex;
-  max-width: 345px;
 }
 .btn--dish .dish__description {
   padding: 1.5rem;
@@ -156,9 +177,54 @@ a {
 }
 .card__footer {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
+}
+.card__footer::before {
+  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  padding-bottom: 1.5rem;
+  font-size: 2.5rem;
+  opacity: 1;
+  transition: all 350ms ease-in-out;
+  top: 2.3rem;
+}
+.card__footer::after {
+  display: inline-block;
+  position: absolute;
+  right: 2rem;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f004";
+  padding-bottom: 1.5rem;
+  font-size: 2.5rem;
+  opacity: 1;
+  transition: all 350ms ease-in-out;
+  background: linear-gradient(to top left, #9456dc, #ff79db);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-weight: 900;
+  opacity: 0;
+  top: 2.4rem;
+  right: 2.1rem;
+}
+.card__footer:hover::after {
+  opacity: 1;
+  cursor: pointer;
+  transform: scale(1.15);
 }
 .card__footer i {
   font-size: 2.5rem;
@@ -178,6 +244,58 @@ a {
   font-size: 1.3rem;
   font-weight: 400;
   border-radius: 5rem;
+}
+
+.card {
+  position: relative;
+}
+.card__news {
+  display: flex;
+  font-weight: 700;
+  background-color: #99E2D0;
+  color: #2c9c81;
+  position: absolute;
+  top: 1rem;
+  right: 2rem;
+  padding: 0rem 1rem;
+  border-radius: 0.2rem;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #9356dc;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  font-size: 5rem;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.95;
+  animation: loader 2s both;
+}
+.loader h1 {
+  font-family: "shrikhand", sans-serif;
+  padding: 0rem 2rem;
+}
+.loader__spinner {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50px;
+  border: 0.6rem solid rgba(255, 255, 255, 0.4);
+  position: relative;
+}
+.loader__spinner::after {
+  content: "";
+  position: absolute;
+  inset: -0.6rem;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50px;
+  border: 0.6rem solid transparent;
+  border-top-color: #ffffff;
+  animation: spinner 1000ms ease-in-out;
 }
 
 .wrapper {
@@ -349,10 +467,40 @@ footer .footer-content__links span {
   border-radius: 4.5rem 4.5rem 0rem 0rem;
   padding: 4rem 1.5rem;
 }
+@media screen and (min-width: 768px) {
+  .restaurant-menu {
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    padding: 5rem 2rem;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .restaurant-menu {
+    display: grid;
+    padding: 17rem 2rem;
+    column-gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+  }
+}
 .restaurant-menu__heading {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .restaurant-menu__heading {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .restaurant-menu__heading {
+    grid-column: 1/4;
+    grid-row: 1;
+  }
 }
 .restaurant-menu__heading h1 {
   font-family: "shrikhand";
@@ -361,7 +509,7 @@ footer .footer-content__links span {
 .restaurant-menu__heading::before {
   display: inline-block;
   position: absolute;
-  right: 1rem;
+  right: 2rem;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
@@ -371,12 +519,12 @@ footer .footer-content__links span {
   padding-bottom: 1.5rem;
   font-size: 2.5rem;
   opacity: 1;
-  transition: all 500ms ease-in-out;
+  transition: all 350ms ease-in-out;
 }
 .restaurant-menu__heading::after {
   display: inline-block;
   position: absolute;
-  right: 1rem;
+  right: 2rem;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
@@ -386,7 +534,7 @@ footer .footer-content__links span {
   padding-bottom: 1.5rem;
   font-size: 2.5rem;
   opacity: 1;
-  transition: all 500ms ease-in-out;
+  transition: all 350ms ease-in-out;
   background: linear-gradient(to top left, #9456dc, #ff79db);
   background-clip: text;
   -webkit-background-clip: text;
@@ -399,13 +547,41 @@ footer .footer-content__links span {
   cursor: pointer;
   transform: scale(1.15);
 }
-.restaurant-menu__dish {
+.restaurant-menu__order {
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .restaurant-menu__order {
+    align-self: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .restaurant-menu__order {
+    grid-row: 3;
+    align-self: center;
+    align-items: center;
+    grid-column: 2;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-dish {
+    justify-self: center;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .container-dish {
+    justify-self: center;
+  }
+}
+.container-dish__dish {
   position: relative;
   font-weight: 100;
   font-size: 1.6rem;
   text-transform: uppercase;
 }
-.restaurant-menu__dish::before {
+.container-dish__dish::before {
   width: 4rem;
   height: 0.2rem;
   content: "";
@@ -413,27 +589,24 @@ footer .footer-content__links span {
   bottom: 1.5rem;
   background-color: #99e2d0;
 }
-.restaurant-menu__list {
+.container-dish__list {
   padding-bottom: 2rem;
 }
-.restaurant-menu__list li {
+.container-dish__list li {
   overflow: hidden;
   margin-bottom: 2rem;
   list-style: none;
   opacity: 0;
   animation: slide-menu 1000ms both;
 }
-.restaurant-menu__list li:nth-of-type(1) {
+.container-dish__list li:nth-of-type(1) {
   animation-delay: 100ms;
 }
-.restaurant-menu__list li:nth-of-type(2) {
+.container-dish__list li:nth-of-type(2) {
   animation-delay: 300ms;
 }
-.restaurant-menu__list li:nth-of-type(3) {
+.container-dish__list li:nth-of-type(3) {
   animation-delay: 450ms;
-}
-.restaurant-menu__order {
-  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
