--- a/scss/Utils/_keyframes.scss
+++ b/scss/Utils/_keyframes.scss
@@ -14,7 +14,30 @@
     transform: rotate(-180deg);
   }
   100% {
-    transform:rotate(0deg);
+    transform: rotate(0deg);
   }
 }
 
+@keyframes loader {
+  0% {
+    opacity: 0.95;
+    z-index: 10000;
+  }
+  50%{
+    opacity: 0.95;
+    z-index: 10000;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1000;
+  }
+}
+
+@keyframes spinner{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
