--- a/scss/Utils/_keyframes.scss
+++ b/scss/Utils/_keyframes.scss
@@ -1,11 +1,11 @@
 @keyframes slide-menu {
   0% {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(2rem);
   }
   100% {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0rem);
   }
 }
 
