--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,8 +8,8 @@
 @import "./Composants/buttons";
 @import "./Composants/cards";
 @import"./Composants/bulletPoint";
-@import"./Composants/likes";
 @import"./Composants/news";
+@import"./Composants/like-btn";
 
 @import"./Layout/loader";
 @import"./Layout/wrapper";
