--- a/css/style.css
+++ b/css/style.css
@@ -92,21 +92,31 @@ a {
   cursor: pointer;
 }
 .btn--primary {
-  background: linear-gradient(to top left, #9456dc, #ff79db);
+  background: linear-gradient(to top left, #9356dc, #ff79da);
   border-radius: 10rem;
   color: #ffffff;
   padding: 1.8rem 2.2rem;
+  scale: 1;
+  transition-duration: 300ms;
+}
+.btn--primary:hover {
+  box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+  background: linear-gradient(to top left, #a16be0, #ff93e1);
+  transform: scale(1.05);
 }
 .btn--step {
   background-color: #f6f6f6;
   border-radius: 2.5rem;
   padding: 2.5rem;
+  transition-duration: 300ms;
 }
 .btn--step i {
   padding-right: 2rem;
 }
 .btn--step:hover {
   background-color: #f4eefc;
+  box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+  transform: scale(1.05);
 }
 .btn--step:hover i {
   color: #9356dc;
@@ -155,11 +165,17 @@ a {
   animation: rotation-confirm 500ms ease-in-out;
 }
 .btn--order {
-  background: linear-gradient(to top left, #9456dc, #ff79db);
+  background: linear-gradient(to top left, #9356dc, #ff79da);
   border-radius: 10rem;
   color: #ffffff;
   padding: 1.7rem 5rem;
   font-size: 1.5rem;
+  transition-duration: 300ms;
+}
+.btn--order:hover {
+  box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+  background: linear-gradient(to top left, #a16be0, #ff93e1);
+  transform: scale(1.05);
 }
 
 .card {
@@ -167,6 +183,7 @@ a {
   background-color: var(--color-white);
   border-radius: 1.5rem;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 .card__img img {
   width: 100%;
@@ -176,55 +193,9 @@ a {
   border-radius: 1.5rem 1.5rem 0rem 0rem;
 }
 .card__footer {
-  display: flex;
-  position: relative;
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
-}
-.card__footer::before {
-  display: inline-block;
-  position: absolute;
-  right: 2rem;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  padding-bottom: 1.5rem;
-  font-size: 2.5rem;
-  opacity: 1;
-  transition: all 350ms ease-in-out;
-  top: 2.3rem;
-}
-.card__footer::after {
-  display: inline-block;
-  position: absolute;
-  right: 2rem;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-  content: "\f004";
-  padding-bottom: 1.5rem;
-  font-size: 2.5rem;
-  opacity: 1;
-  transition: all 350ms ease-in-out;
-  background: linear-gradient(to top left, #9456dc, #ff79db);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  font-weight: 900;
-  opacity: 0;
-  top: 2.4rem;
-  right: 2.1rem;
-}
-.card__footer:hover::after {
-  opacity: 1;
-  cursor: pointer;
-  transform: scale(1.15);
 }
 
 .bullet-point {
@@ -243,19 +214,40 @@ a {
   border-radius: 5rem;
 }
 
-.card {
-  position: relative;
-}
 .card__news {
+  position: absolute;
   display: flex;
   font-weight: 700;
   background-color: #99E2D0;
   color: #2c9c81;
-  position: absolute;
   top: 1rem;
   right: 2rem;
   padding: 0rem 1rem;
   border-radius: 0.2rem;
+}
+
+.card {
+  position: relative;
+}
+.card .fa-heart {
+  position: absolute;
+  bottom: 3rem;
+  right: 2.5rem;
+  padding: 0.1rem;
+  border-radius: 50px;
+}
+.card .fa-solid {
+  background: linear-gradient(to top left, #9356dc, #ff79da);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+}
+.card :hover .fa-solid {
+  opacity: 1;
+  transform: scale(1.15);
+  transform-origin: center;
+  transition: all 500ms cubic-bezier(0.57, 0.74, 0.84, -0.06);
 }
 
 .loader {
@@ -272,7 +264,7 @@ a {
   animation: loader 2000ms both;
 }
 .loader h1 {
-  font-size: 8rem;
+  font-size: 3rem;
   color: black;
   font-family: "shrikhand", sans-serif;
   padding: 0rem 2rem;
@@ -447,7 +439,6 @@ footer .footer-content__links span {
 
 @media screen and (min-width: 768px) {
   .restaurant-intro {
-    display: flex;
     margin: 5rem 0rem;
   }
 }
@@ -477,7 +468,6 @@ footer .footer-content__links span {
 @media screen and (min-width: 1120px) {
   .restaurant-menu {
     display: grid;
-    padding: 17rem 2rem;
     column-gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
@@ -533,7 +523,7 @@ footer .footer-content__links span {
   font-size: 2.5rem;
   opacity: 1;
   transition: all 350ms ease-in-out;
-  background: linear-gradient(to top left, #9456dc, #ff79db);
+  background: linear-gradient(to top left, #9356dc, #ff79da);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
@@ -544,6 +534,8 @@ footer .footer-content__links span {
   opacity: 1;
   cursor: pointer;
   transform: scale(1.15);
+  transform-origin: center;
+  transition: all 500ms cubic-bezier(0.57, 0.74, 0.84, -0.06);
 }
 .restaurant-menu__order {
   text-align: center;
@@ -575,7 +567,7 @@ footer .footer-content__links span {
 }
 .container-dish__dish {
   position: relative;
-  font-weight: 100;
+  font-weight: 300;
   font-size: 1.6rem;
   text-transform: uppercase;
 }
