--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -2,7 +2,7 @@
 
 .restaurant-intro {
   @media screen and (min-width: 768px) {
-    display: flex;
+    // display: flex;
     margin: 5rem 0rem;
   }
   &__img {
@@ -29,7 +29,7 @@
   }
   @media screen and (min-width: 1120px) {
     display: grid;
-    padding: 17rem 2rem;
+    // padding: 17rem 2rem;
     column-gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
@@ -56,7 +56,7 @@
     }
     &::after {
       @include like-btn;
-      background: linear-gradient(to top left, #9456dc, #ff79db);
+      background: $color-linear-gradient--primaryToSecondary;
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
@@ -67,6 +67,8 @@
       opacity: 1;
       cursor: pointer;
       transform: scale(1.15);
+      transform-origin: center;
+      transition: all 500ms cubic-bezier(.57,.74,.84,-0.06);
     }
   }
   &__order {
@@ -95,7 +97,7 @@
   }
   &__dish {
     position: relative;
-    font-weight: 100;
+    font-weight: 300;
     font-size: 1.6rem;
     text-transform: uppercase;
     &::before {
