--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -9,16 +9,26 @@
     border-radius: 10rem;
     color: $color-white;
     padding: 1.8rem 2.2rem;
+    scale: 1;
+    transition-duration: 300ms;
+    &:hover {
+      box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+      background: $color-lighten-linear-gradient--primaryToSecondary;
+      transform: scale(1.05);
+    }
   }
   &--step {
     background-color: $color-background;
     border-radius: 2.5rem;
     padding: 2.5rem;
+    transition-duration: 300ms;
     i {
       padding-right: 2rem;
     }
     &:hover {
       background-color: lighten($color-primary, $amount: 36%);
+      box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+      transform: scale(1.05);
       i {
         color: $color-primary;
       }
@@ -75,6 +85,12 @@
     color: $color-white;
     padding: 1.7rem 5rem;
     font-size: 1.5rem;
+    transition-duration: 300ms;
+    &:hover{
+      box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.7);
+      background: $color-lighten-linear-gradient--primaryToSecondary;
+      transform: scale(1.05);
+    }
   }
 }
 
@@ -104,31 +120,11 @@
 }
 
 @mixin card-footer {
-  display: flex;
-  position: relative;
+  // display: flex;
+  // position: relative;
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
-  &::before {
-    @include like-btn;
-    top: 2.3rem;
-  }
-  &::after {
-    @include like-btn;
-    background: linear-gradient(to top left, #9456dc, #ff79db);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    font-weight: 900;
-    opacity: 0;
-    top: 2.4rem;
-    right: 2.1rem;
-  }
-  &:hover::after {
-    opacity: 1;
-    cursor: pointer;
-    transform: scale(1.15);
-  }
 }
 
 @mixin bullet-point {
