--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -4,4 +4,13 @@ $color-tertiary: #99e2d0;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-background: #f6f6f6;
-$color-linear-gradient--primaryToSecondary: linear-gradient(to top left, #9456dc, #ff79db);
+$color-linear-gradient--primaryToSecondary: linear-gradient(
+  to top left,
+  $color-primary,
+  $color-secondary
+);
+$color-lighten-linear-gradient--primaryToSecondary: linear-gradient(
+  to top left,
+  lighten($color-primary, 5%),
+  lighten($color-secondary, 5%)
+);
