--- a/scss/Composants/_like-btn.scss
+++ b/scss/Composants/_like-btn.scss
@@ -6,6 +6,7 @@
     right: 2.5rem;
     padding: 0.1rem;
     border-radius: 50px;
+    font-size: 2.5rem;
   }
   & .fa-solid {
     background: $color-linear-gradient--primaryToSecondary;
