--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -20,37 +20,23 @@
   background-color: $color-background;
   border-radius: 4.5rem 4.5rem 0rem 0rem;
   padding: 4rem 1.5rem;
-  @media screen and (min-width: 768px){
-    display: grid;
-    column-gap: 2rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    padding: 5rem 2rem;
+  @media screen and (min-width: 768px) {
+    padding: 4rem 7.5rem;
   }
-  @media screen and (min-width: 1120px) {
-    display: grid;
-    // padding: 17rem 2rem;
-    column-gap: 2rem;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+  @media screen and (min-width: 1220px) {
+    padding: 4rem 7.5rem;
+  }
+  @media screen and (min-width: 1220px) {
+    &__container {
+      display: flex;
+      justify-content: space-between;
+    }
   }
   &__heading {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    @media screen and (min-width: 768px){
-      grid-column: 1 / 3;
-      grid-row: 1;
-    }
-    @media screen and (min-width: 1120px) {
-      grid-column: 1 / 4;
-      grid-row: 1;
-
-    }
-    & h1 {
-      font-family: "shrikhand";
-      font-size: 2.8rem;
-    }
+    font-family: "shrikhand";
+    font-size: 2.8rem;
     &::before {
       @include like-btn;
     }
@@ -68,31 +54,19 @@
       cursor: pointer;
       transform: scale(1.15);
       transform-origin: center;
-      transition: all 500ms cubic-bezier(.57,.74,.84,-0.06);
+      transition: all 500ms cubic-bezier(0.57, 0.74, 0.84, -0.06);
     }
   }
   &__order {
     text-align: center;
-    @media screen and (min-width: 768px){
-
-      align-self: center;
-      align-items: center;
-
-    }
-    @media screen and (min-width: 1120px) {
-      grid-row: 3;
-      align-self: center;
-      align-items: center;
-      grid-column: 2;
-    }
   }
 }
 
 .container-dish {
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     justify-self: center;
   }
-  @media screen and (min-width: 1120px){
+  @media screen and (min-width: 1220px) {
     justify-self: center;
   }
   &__dish {
@@ -111,9 +85,6 @@
   }
   &__list {
     padding-bottom: 2rem;
-    @media screen and (min-width: 768px){
-      // grid-row: 2 / 3;
-    }
     li {
       overflow: hidden;
       margin-bottom: 2rem;
