--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -40,6 +40,9 @@
     font-weight: 100;
     font-size: 1.5rem;
     display: flex;
+    @media screen and (min-width: 1220px) {
+     width: 34.5rem;;
+    }
     & .dish__description {
       padding: 1.5rem;
       overflow: hidden;
